[package]
name = "jp_cli"
version = "0.4.0"
edition = "2018"
authors = ["Kevin Lanni <therealklanni@gmail.com>"]
description = "JSON Probe — pluck values from JSON input"
repository = "http://github.com/therealklanni/jp-cli"
keywords = ["JSON", "CLI", "probe", "parse", "print"]
categories = ["command-line-utilities"]
license = "MITNFA"

[badges]
is-it-maintained-issue-resolution = { repository = "therealklanni/jp-cli" }
is-it-maintained-open-issues = { repository = "therealklanni/jp-cli" }
maintenance = { status = "actively-developed" }

[dependencies]
serde_json = "1.0.38"
clap = "2.31.2"
exit = "0.1.0"

[[bin]]
name = "jp"
path = "src/main.rs"
